# cranfield-mini-project-1

./: Book.cpp  Book.h  CMakeLists.txt  DVD.cpp  DVD.h  Journal.cpp  Journal.h  Library.cpp  Library.h  MusicCD.cpp  MusicCD.h  Publication.cpp  Publication.h  Track.cpp  Track.h  main.cpp
